Added info about new Drupal theme.

--- a/index.html
+++ b/index.html
@@ -235,11 +235,12 @@ $vars['attributes_array']['class'] = array(
 }</pre></small>
   </article>
 
-  <article id="new-theme" data-x="6600" data-y="-5000" data-scale="1"  data-rotate="-180" class="step hide-on-theme-functions hide-on-theme-feed-icon hide-on-theme-breadcrumb hide-on-clean-markup-module hide-on-final">
-    Placeholder for new theme information.
+  <article id="gesso" data-x="6600" data-y="-5000" data-scale="1"  data-rotate="-180" class="step hide-on-theme-functions hide-on-theme-feed-icon hide-on-theme-breadcrumb hide-on-clean-markup-module hide-on-final">
+    <h2>Gesso</h2>
+    <a href="https://www.drupal.org/project/gesso">drupal.org/project/gesso</a>
   </article>
 
-  <article id="clean-markup-module" data-x="6100" data-y="-5000" data-scale="1"  data-rotate="-180" class="step hide-on-theme-functions hide-on-theme-feed-icon hide-on-theme-breadcrumb hide-on-new-theme hide-on-final">
+  <article id="clean-markup-module" data-x="6100" data-y="-5000" data-scale="1"  data-rotate="-180" class="step hide-on-theme-functions hide-on-theme-feed-icon hide-on-theme-breadcrumb hide-on-gesso hide-on-final">
     <h2>Clean Markup module</h2>
     <a href="https://www.drupal.org/project/clean_markup">drupal.org/project/clean_markup</a>
   </article>
